Fix a bug where dangling continue edges across loop boundaries could hold incorrect SSA names (bug 729902, r=jandem).