js/src/jit-test/tests/ion/bug729902-1.js
@@ -1,0 +1,11 @@
+var x = 2;
+outer:
+while (x == 10) {
+  while (x == 10) {
+    if (x < (null ))
+      continue outer;
+    while (x < 10) {
+      ((function() {}).abstract) = 0;
+    }
+  }
+}
